# rust-blog

./: .gitignore  Cargo.toml  LICENSE  README.md  env.example
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: Cargo.toml  build.rs
blog-server/migrations/: 20251201121907_create_users.up.sql  20251201121941_create_posts.down.sql  20251201121941_create_posts.up.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs  utils.rs
blog-server/src/application/: auth_service.rs  post_service.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  logging.rs  mod.rs  security.rs
blog-server/src/presentation/: dto.rs  grpc_service.rs  middleware.rs  mod.rs  utils.rs
blog-server/src/presentation/handlers/: auth.rs  post.rs
blog-wasm/: Cargo.toml  Dioxus.toml  tailwind.css
blog-wasm/assets/: main.css  tailwind.css
blog-wasm/src/: client.rs  error.rs  main.rs
