[workspace.package]
name = "rust-blog"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["blog-client", "blog-server", "blog-cli", "blog-wasm"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde", "rng-getrandom"] }
tonic = { version = "0.14" }
prost = { version = "0.14" }
tonic-prost = { version = "0.14" }
prost-types = { version = "0.14", features = ["std", "chrono"] }