[package]
name = "blog-client"
version.workspace = true
edition.workspace = true

[dependencies]
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
prost-types = { version = "0.14", features = ["chrono"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
thiserror = { version = "2.0" }
tokio = "1.48"
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tonic-prost-build = "0.14"
