[package]
name = "blog-client"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = {workspace = true}
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
derive_more = { version = "2", features = ["full"] }
tonic = { workspace = true }
prost = {workspace = true}
tonic-prost = {workspace = true}
prost-types = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
