[package]
name = "blog-server"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-service = "2"
async-trait = { workspace = true }
argon2 = "0.5"
chrono = { workspace = true }
dotenvy = "0.15"
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "time"] }
uuid = { workspace = true }
anyhow = "1"
futures-util = "0.3"
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
