[package]
name = "blog-wasm"
version = "0.1.0"
authors = ["d10658 <sergoiwj@duck.com>"]
edition = "2021"


[[bin]]
name = "blog-wasm"

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "web"] }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4", "serde", "rng-getrandom"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
thiserror = "2"
gloo-net = "0.6"
gloo-storage = "0.3"
derive_more = { version = "2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dioxus-web = "0.7.2"
dioxus-tailwindcss = "0.8"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
