[package]
name = "blog-wasm"
version = "0.1.0"
authors = ["d10658 <sergoiwj@duck.com>"]
edition = "2021"


[[bin]]
name = "blog-wasm"

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "web"] }
async-trait = "0.1.89"
serde = { workspace = true }
serde_json = "1.0.145"
uuid = { workspace = true }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
thiserror = {workspace = true}
gloo-net = "0.6"
gloo-storage = "0.3"
derive_more = { version = "2", features = ["full"] }
chrono = { workspace = true }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
